redis and some fixes
